# classificador-ocr-parsing

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: batch_infer_classifier.py  infer_classifier.py  main_data-augmentation.py  train_classifier.py
src/data_augmentation/: cli.py  config.py  models.py  pipeline.py  planner.py  readme.md
src/data_augmentation/Documentos/: 00003658__aug01.txt  00003658__orig.txt  00025939__aug01.txt  00025939__orig.txt
src/data_augmentation/utils/: __init__.py  discovery.py  io.py  transforms.py
src/document_classifier/: __init__.py  batch_inference.py  constants.py  data.py  infer.py  losses.py  metrics.py  models.py  readme.md  train.py
src/document_classifier/utils/: __init__.py  inference.py  runtime.py
src/ocr_parsing/: __init__.py  batch_cli.py  cli.py  config.py  evaluation.py  ocr_engine.py  parsing.py  pipeline.py  preprocessing.py  readme.md  rectification.py
src/ocr_parsing/utils/: __init__.py  io.py  metrics.py
